--- a/Nest Game/index.html
+++ b/Nest Game/index.html
@@ -6,16 +6,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nest Game</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/4ca85b1d80.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <div class="navbar">
-        <p>check11</p>
+    <div class="nav-bar">
+        <div class="icon"><img src="img/icon-re.png" alt=""></div>
+        <div class="nav-search"><input type="search" name="" id="">
+            <a href="" onclick="()"><i class="fa-solid fa-magnifying-glass"></i></a>
+        </div>
+        <div class="lang">ภาษา</div>
+        <div class="market"></div>
+        <div class="like"></div>
+        <div class="login"></div>
     </div>
-    <h1>MAMA</h1>
-    <p>hello</p>
-    <H3>ppm</H3>
-    <p>ooo</p>
+    <section class="nav-2">
+        <div class="nav-manu">
+            <h2>หมวดหมู่</h2>
+        </div>
+        <div class="nav-manu-info">
+            <h2>เเนะนำ</h2>
+            <h2>โปรโมชั่น</h2>
+            <h2>บริการหลังซื้อ</h2>
+            <h2>วิธีซื้อ / ใช้งาน</h2>
+            <h2>ติดต่อ</h2>
+        </div>
+    </section>
 </body>
 <script src="script.js"></script>
 
