--- a/Nest Game/index.html
+++ b/Nest Game/index.html
@@ -12,24 +12,29 @@
 <body>
     <div class="nav-bar">
         <div class="icon"><img src="img/icon-re.png" alt=""></div>
-        <div class="nav-search"><input type="search" name="" id="">
-            <a href="" onclick="()"><i class="fa-solid fa-magnifying-glass"></i></a>
+        <div class="nav-search">
+            <input type="text" name="" id="" placeholder="  ค้นหา">
+            <button onclick="bt()"><i class="fa-solid fa-magnifying-glass"></i></button>
         </div>
-        <div class="lang">ภาษา</div>
-        <div class="market"></div>
-        <div class="like"></div>
-        <div class="login"></div>
+        <div class="lang">
+            <p>ภาษา</p>
+        </div>
+        <div class="icon-gop">
+            <div class="market"><i class="fa-solid fa-basket-shopping"></i></div>
+            <div class="like"><i class="fa-solid fa-heart"></i></div>
+            <div class="login"><i class="fa-solid fa-right-to-bracket"></i></div>
+        </div>
     </div>
     <section class="nav-2">
         <div class="nav-manu">
-            <h2>หมวดหมู่</h2>
+            <h3>หมวดหมู่</h3>
         </div>
         <div class="nav-manu-info">
-            <h2>เเนะนำ</h2>
-            <h2>โปรโมชั่น</h2>
-            <h2>บริการหลังซื้อ</h2>
-            <h2>วิธีซื้อ / ใช้งาน</h2>
-            <h2>ติดต่อ</h2>
+            <p>เเนะนำ</p>
+            <p>โปรโมชั่น</p>
+            <p>บริการหลังซื้อ</p>
+            <p>วิธีซื้อ / ใช้งาน</p>
+            <p>ติดต่อ</p>
         </div>
     </section>
 </body>
