--- a/Nest Game/index.html
+++ b/Nest Game/index.html
@@ -38,6 +38,10 @@
         </div>
     </section>
 
+    <div class="header-best-seller">
+        <p>เกมขายดี</p>
+    </div>
+
     <div class="list-product-sell">
         <div class="container">
         <div id="list-product" class="best-seller">
@@ -46,8 +50,8 @@
             </div>
             <div class="list-item-name-best-seller-1">
                 <div class="box-product-sell-1">
-                    <h5 class="procuct-name">Black Myth Wukong</h5>
-                    <div class="d-flex justify-content-center align-items-center m-0 p-0 ">
+                    <h5 class="product-name">Black Myth Wukong</h5>
+                    <div class="price">
                         <p>ราคา</p>
                         <p>2,000</p>
                         <p>Bath</p>
@@ -60,6 +64,7 @@
             </div>
         </div>
     </div>
+    
     <div class="container">
         <div id="list-product" class="best-seller">
             <div class="img-product-item-best-seller-1">
@@ -67,8 +72,8 @@
             </div>
             <div class="list-item-name-best-seller-1">
                 <div class="box-product-sell-1">
-                    <h5 class="procuct-name">Black Myth Wukong</h5>
-                    <div class="d-flex justify-content-center align-items-center m-0 p-0 ">
+                    <h5 class="product-name">Black Myth Wukong</h5>
+                    <div class="price">
                         <p>ราคา</p>
                         <p>2,000</p>
                         <p>Bath</p>
@@ -81,6 +86,7 @@
             </div>
         </div>
     </div>
+
     <div class="container">
         <div id="list-product" class="best-seller">
             <div class="img-product-item-best-seller-1">
@@ -88,8 +94,8 @@
             </div>
             <div class="list-item-name-best-seller-1">
                 <div class="box-product-sell-1">
-                    <h5 class="procuct-name">Black Myth Wukong</h5>
-                    <div class="d-flex justify-content-center align-items-center m-0 p-0 ">
+                    <h5 class="product-name">Black Myth Wukong</h5>
+                    <div class="price">
                         <p>ราคา</p>
                         <p>2,000</p>
                         <p>Bath</p>
@@ -102,6 +108,7 @@
             </div>
         </div>
     </div>
+
     <div class="container">
         <div id="list-product" class="best-seller">
             <div class="img-product-item-best-seller-1">
@@ -109,8 +116,8 @@
             </div>
             <div class="list-item-name-best-seller-1">
                 <div class="box-product-sell-1">
-                    <h5 class="procuct-name">Black Myth Wukong</h5>
-                    <div class="d-flex justify-content-center align-items-center m-0 p-0 ">
+                    <h5 class="product-name">Black Myth Wukong</h5>
+                    <div class="price">
                         <p>ราคา</p>
                         <p>2,000</p>
                         <p>Bath</p>
@@ -123,6 +130,31 @@
             </div>
         </div>
     </div>
+
+    <div class="container">
+        <div id="list-product" class="best-seller">
+            <div class="img-product-item-best-seller-1">
+                <img id="procuct-best-seller-1" class="game-best-seller-1" src="img/Black_Myth_Wukong_cover_art.jpg">
+            </div>
+            <div class="list-item-name-best-seller-1">
+                <div class="box-product-sell-1">
+                    <h5 class="product-name">Black Myth Wukong</h5>
+                    <div class="price">
+                        <p>ราคา</p>
+                        <p>2,000</p>
+                        <p>Bath</p>
+                    </div>
+                    <div class="buy-item">
+                        สั่งซื้อสินค้า
+                    </div>
+                    <p>คงเหลือ x ชิ้น</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container-1">
+
     </div>
 
 </body>
