--- a/Nest Game/index.html
+++ b/Nest Game/index.html
@@ -43,7 +43,7 @@
     <div class="footer-container">
         <div class="footer-left">
             <div class="footer-contract-section">
-                <img src="image.png" alt="Nest Games logo" class="footer-logo">
+                <img src="img/icon-re.png" alt="Nest Games logo" class="footer-logo">
 
                 <p class="footer-description">
                     <strong>Nest Games</strong><br>
