--- a/Nest Game/index.html
+++ b/Nest Game/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <main>
     <div class="nav-bar">
         <div class="icon"><img src="img/icon-re.png" alt=""></div>
         <div class="nav-search">
@@ -39,12 +40,7 @@
     </section>
 
     
-    <section>
-<footer class="footer">
-    <div class="footer-container">
-        <div class="footer-left">
-            <div class="footer-contract-section">
-                <img src="img/icon-re.png" alt="Nest Games logo" class="footer-logo">
+   
 
 
 
@@ -94,6 +90,7 @@
                 <p>ชื้อมา</p>
                 <button>BY</button>
                 <button><i class="fa-solid fa-heart"></i></button>
+                </main>
             </div>
         </div>
     </section>
@@ -103,7 +100,7 @@
             <div class="footer-container">
                 <div class="footer-left">
                     <div class="footer-contract-section">
-                        <img src="image.png" alt="Nest Games logo" class="footer-logo">
+                        <img src="img/icon-re.png" alt="Nest Games logo" class="footer-logo">
 
                         <p class="footer-description">
                             <strong>Nest Games</strong><br>
