--- a/Nest Game/index.html
+++ b/Nest Game/index.html
@@ -132,6 +132,7 @@
                     <p>เว็บไซต์นี้ได้สร้างมาเพื่อใช้ในเชิงพาณิชย์ เป็นเพียงตัวอย่างเพื่อใช้สำหรับการศึกษา</p>
                 </div>
             </div>
+            <div class="footer-copy">@Copyright</div>
         </footer>
     </section>
 
