--- a/Nest Game/index.html
+++ b/Nest Game/index.html
@@ -39,17 +39,12 @@
       </div>
     </section>
 
-
-
-
-
-
     <section class="contor">
       <div class="show">
         <button onclick="black()">
-        </button>
-        <img id="img" src="img/add.png" alt="">
-        <button onclick="netx()"> > </button>
+          < </button>
+            <img id="img" src="img/add.png" alt="">
+            <button onclick="netx()"> > </button>
       </div>
     </section>
 
@@ -90,50 +85,48 @@
           <p>ชื้อมา</p>
           <button>BY</button>
           <button><i class="fa-solid fa-heart"></i></button>
-  </main>
-  </div>
-  </div>
-  </section>
-  <section>
-
-    <footer class="footer">
-      <div class="footer-container">
-        <div class="footer-left">
-          <div class="footer-contract-section">
-            <img src="img/icon-re.png" alt="Nest Games logo" class="footer-logo">
-
-            <p class="footer-description">
-              <strong>Nest Games</strong><br>
-              มอบความคุ้มค่ามากมายให้กับเกมเมอร์เช่นคุณ
-              ทั้งเกมสมาชิก เติมเงิน และอื่น ๆ อีกมากมาย เลือกขายบน PC, Xbox,
-              PlayStation และ Nintendo กว่า 15,000 เกม แล้วค้นหาแพลตฟอร์มของคุณได้เลย
-              ร่วมเป็นส่วนหนึ่งกับเกมเมอร์หลายล้านคนที่กำลังประหยัดสุดคุ้มกับ Nest Games
-            </p>
-          </div>
-
-          <p>ช่องทางการชำระ:</p>
-          <div class="payment-icons">
-            <div class="payment-icon"></div>
-            <div class="payment-icon"></div>
-            <div class="payment-icon"></div>
-            <div class="payment-icon"></div>
-          </div>
-        </div>
-        <div class="footer-right">
-          <p>ช่องทางการติดต่อ</p>
-          <div class="contact-icons">
-            <div class="circle"></div>
-            <div class="circle"></div>
-            <div class="circle"></div>
-            <div class="circle"></div>
-            <div class="circle"></div>
-          </div>
-          <p>เว็บไซต์นี้ได้สร้างมาเพื่อใช้ในเชิงพาณิชย์ เป็นเพียงตัวอย่างเพื่อใช้สำหรับการศึกษา</p>
         </div>
       </div>
-      <div class="footer-copy">@Copyright</div>
-    </footer>
-  </section>
+    </section>
+
+    <!-- Copyright -->
+    <section>
+      <footer class="footer">
+        <div class="footer-container">
+          <div class="footer-left">
+            <div class="footer-contract-section">
+              <img src="img/icon-re.png" alt="Nest Games logo" class="footer-logo">
+              <p class="footer-description">
+                <strong>Nest Games</strong><br>
+                มอบความคุ้มค่ามากมายให้กับเกมเมอร์เช่นคุณ
+                ทั้งเกมสมาชิก เติมเงิน และอื่น ๆ อีกมากมาย เลือกขายบน PC, Xbox,
+                PlayStation และ Nintendo กว่า 15,000 เกม แล้วค้นหาแพลตฟอร์มของคุณได้เลย
+                ร่วมเป็นส่วนหนึ่งกับเกมเมอร์หลายล้านคนที่กำลังประหยัดสุดคุ้มกับ Nest Games
+              </p>
+            </div>
+            <p>ช่องทางการชำระ:</p>
+            <div class="payment-icons">
+              <div class="payment-icon"></div>
+              <div class="payment-icon"></div>
+              <div class="payment-icon"></div>
+              <div class="payment-icon"></div>
+            </div>
+          </div>
+          <div class="footer-right">
+            <p>ช่องทางการติดต่อ</p>
+            <div class="contact-icons">
+              <div class="circle"></div>
+              <div class="circle"></div>
+              <div class="circle"></div>
+              <div class="circle"></div>
+              <div class="circle"></div>
+            </div>
+            <p>เว็บไซต์นี้ได้สร้างมาเพื่อใช้ในเชิงพาณิชย์ เป็นเพียงตัวอย่างเพื่อใช้สำหรับการศึกษา</p>
+          </div>
+        </div>
+        <div class="footer-copy">@Copyright</div>
+      </footer>
+    </section>
 </body>
 <script src="script.js"></script>
 
