--- a/Nest Game/index.html
+++ b/Nest Game/index.html
@@ -64,7 +64,7 @@
 
     <section class="contor">
       <div class="show">
-        <button onclick="black()"><</button>
+        <button onclick="black()"></button>
         <img id="img" src="img/add.png" alt="" />
         <button onclick="netx()">></button>
       </div>
