--- a/Nest Game/index.html
+++ b/Nest Game/index.html
@@ -1,156 +1,147 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nest Game</title>
-    <link rel="stylesheet" href="style.css" />
-    <script
-      src="https://kit.fontawesome.com/4ca85b1d80.js"
-      crossorigin="anonymous"
-    ></script>
-  </head>
 
-  <body>
-    <div id="loginPopup">
-      <div id="loginBox">
-        <span id="closeBtn">&times;</span>
-        <h3>Login</h3>
-        <input type="text" name="usrnamelogin" placeholder="Username" /><br />
-        <input
-          type="password"
-          name="urspwd"
-          placeholder="Password"
-        /><br /><br />
-        <button>Submit</button>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Nest Game</title>
+  <link rel="stylesheet" href="style.css" />
+  <script src="https://kit.fontawesome.com/4ca85b1d80.js" crossorigin="anonymous"></script>
+</head>
+
+<body>
+  <div id="loginPopup">
+    <div id="loginBox">
+      <span id="closeBtn">&times;</span>
+      <h3>Login</h3>
+      <input type="text" name="usrnamelogin" placeholder="Username" /><br />
+      <input type="password" name="urspwd" placeholder="Password" /><br /><br />
+      <button>Submit</button>
+    </div>
+  </div>
+  <div class="nav-bar">
+    <div class="icon"><img src="img/icon-re.png" alt="" /></div>
+    <div class="nav-search">
+      <input type="text" name="" id="" placeholder="  ค้นหา" />
+      <button onclick="bt()">
+        <i class="fa-solid fa-magnifying-glass"></i>
+      </button>
+    </div>
+    <div class="icon-gop">
+      <div class="lang">
+        <p>ภาษา</p>
+      </div>
+      <div class="market"><i class="fa-solid fa-basket-shopping"></i></div>
+      <div class="like"><i class="fa-solid fa-heart"></i></div>
+      <div class="login"><i class="fa-solid fa-right-to-bracket"></i></div>
+    </div>
+  </div>
+  <section class="nav-2">
+    <div class="nav-manu">
+      <h3>หมวดหมู่</h3>
+    </div>
+    <div class="nav-manu-info">
+      <p>เเนะนำ</p>
+      <p>โปรโมชั่น</p>
+      <p>บริการหลังซื้อ</p>
+      <p>วิธีซื้อ / ใช้งาน</p>
+      <p>ติดต่อ</p>
+    </div>
+  </section>
+
+  <section class="contor">
+    <div class="show">
+      <button onclick="black()" id="bt-up">
+        < </button>
+          <img id="img" src="img/add.png" alt="" />
+          <button onclick="netx()" id="bt-up">></button>
+    </div>
+  </section>
+
+  <section class="container-1">
+    <div class="header-best-seller">
+      <p>ผู้เล่นเดี่ยว</p>
+    </div>
+  </section>
+  <section class="container-1">
+    <div class="wap-in">
+      <div class="pen">
+        <img src="img/Black_Myth_Wukong_cover_art.jpg" alt="" />
+      </div>
+      <h5>Black Myth Wukong</h5>
+      <div class="it">
+        <p>ชื้อมา</p>
+        <button>BY</button>
+        <button><i class="fa-solid fa-heart"></i></button>
       </div>
     </div>
-    <div class="nav-bar">
-      <div class="icon"><img src="img/icon-re.png" alt="" /></div>
-      <div class="nav-search">
-        <input type="text" name="" id="" placeholder="  ค้นหา" />
-        <button onclick="bt()">
-          <i class="fa-solid fa-magnifying-glass"></i>
-        </button>
+    <div class="wap-in">
+      <div class="pen">
+        <img src="img/Black_Myth_Wukong_cover_art.jpg" alt="" />
       </div>
-      <div class="icon-gop">
-        <div class="lang">
-          <p>ภาษา</p>
-        </div>
-        <div class="market"><i class="fa-solid fa-basket-shopping"></i></div>
-        <div class="like"><i class="fa-solid fa-heart"></i></div>
-        <div class="login"><i class="fa-solid fa-right-to-bracket"></i></div>
+      <h5>Black Myth Wukong</h5>
+      <div class="it">
+        <p>ชื้อมา</p>
+        <button>BY</button>
+        <button><i class="fa-solid fa-heart"></i></button>
       </div>
     </div>
-    <section class="nav-2">
-      <div class="nav-manu">
-        <h3>หมวดหมู่</h3>
+    <div class="wap-in">
+      <div class="pen">
+        <img src="img/Black_Myth_Wukong_cover_art.jpg" alt="" />
       </div>
-      <div class="nav-manu-info">
-        <p>เเนะนำ</p>
-        <p>โปรโมชั่น</p>
-        <p>บริการหลังซื้อ</p>
-        <p>วิธีซื้อ / ใช้งาน</p>
-        <p>ติดต่อ</p>
+      <h5>Black Myth Wukong</h5>
+      <div class="it">
+        <p>ชื้อมา</p>
+        <button>BY</button>
+        <button><i class="fa-solid fa-heart"></i></button>
       </div>
-    </section>
+    </div>
+  </section>
 
-    <section class="contor">
-      <div class="show">
-        <button onclick="black()"><</button>
-        <img id="img" src="img/add.png" alt="" />
-        <button onclick="netx()">></button>
-      </div>
-    </section>
-
-    <section class="container-1">
-      <div class="header-best-seller">
-        <p>ผู้เล่นเดี่ยว</p>
-      </div>
-    </section>
-    <section class="container-1">
-      <div class="wap-in">
-        <div class="pen">
-          <img src="img/Black_Myth_Wukong_cover_art.jpg" alt="" />
-        </div>
-        <h5>Black Myth Wukong</h5>
-        <div class="it">
-          <p>ชื้อมา</p>
-          <button>BY</button>
-          <button><i class="fa-solid fa-heart"></i></button>
-        </div>
-      </div>
-      <div class="wap-in">
-        <div class="pen">
-          <img src="img/Black_Myth_Wukong_cover_art.jpg" alt="" />
-        </div>
-        <h5>Black Myth Wukong</h5>
-        <div class="it">
-          <p>ชื้อมา</p>
-          <button>BY</button>
-          <button><i class="fa-solid fa-heart"></i></button>
-        </div>
-      </div>
-      <div class="wap-in">
-        <div class="pen">
-          <img src="img/Black_Myth_Wukong_cover_art.jpg" alt="" />
-        </div>
-        <h5>Black Myth Wukong</h5>
-        <div class="it">
-          <p>ชื้อมา</p>
-          <button>BY</button>
-          <button><i class="fa-solid fa-heart"></i></button>
-        </div>
-      </div>
-    </section>
-
-    <!-- Copyright -->
-    <section>
-      <footer class="footer">
-        <div class="footer-container">
-          <div class="footer-left">
-            <div class="footer-contract-section">
-              <img
-                src="img/icon-re.png"
-                alt="Nest Games logo"
-                class="footer-logo"
-              />
-              <p class="footer-description">
-                <strong>Nest Games</strong><br />
-                มอบความคุ้มค่ามากมายให้กับเกมเมอร์เช่นคุณ ทั้งเกมสมาชิก เติมเงิน
-                และอื่น ๆ อีกมากมาย เลือกขายบน PC, Xbox, PlayStation และ
-                Nintendo กว่า 15,000 เกม แล้วค้นหาแพลตฟอร์มของคุณได้เลย
-                ร่วมเป็นส่วนหนึ่งกับเกมเมอร์หลายล้านคนที่กำลังประหยัดสุดคุ้มกับ
-                Nest Games
-              </p>
-            </div>
-            <p>ช่องทางการชำระ:</p>
-            <div class="payment-icons">
-              <div class="payment-icon"></div>
-              <div class="payment-icon"></div>
-              <div class="payment-icon"></div>
-              <div class="payment-icon"></div>
-            </div>
-          </div>
-          <div class="footer-right">
-            <p>ช่องทางการติดต่อ</p>
-            <div class="contact-icons">
-              <div class="circle"></div>
-              <div class="circle"></div>
-              <div class="circle"></div>
-              <div class="circle"></div>
-              <div class="circle"></div>
-            </div>
-            <p>
-              เว็บไซต์นี้ได้สร้างมาเพื่อใช้ในเชิงพาณิชย์
-              เป็นเพียงตัวอย่างเพื่อใช้สำหรับการศึกษา
+  <!-- Copyright -->
+  <section>
+    <footer class="footer">
+      <div class="footer-container">
+        <div class="footer-left">
+          <div class="footer-contract-section">
+            <img src="img/icon-re.png" alt="Nest Games logo" class="footer-logo" />
+            <p class="footer-description">
+              <strong>Nest Games</strong><br />
+              มอบความคุ้มค่ามากมายให้กับเกมเมอร์เช่นคุณ ทั้งเกมสมาชิก เติมเงิน
+              และอื่น ๆ อีกมากมาย เลือกขายบน PC, Xbox, PlayStation และ
+              Nintendo กว่า 15,000 เกม แล้วค้นหาแพลตฟอร์มของคุณได้เลย
+              ร่วมเป็นส่วนหนึ่งกับเกมเมอร์หลายล้านคนที่กำลังประหยัดสุดคุ้มกับ
+              Nest Games
             </p>
           </div>
+          <p>ช่องทางการชำระ:</p>
+          <div class="payment-icons">
+            <div class="payment-icon"></div>
+            <div class="payment-icon"></div>
+            <div class="payment-icon"></div>
+            <div class="payment-icon"></div>
+          </div>
         </div>
-        <div class="footer-copy">@Copyright</div>
-      </footer>
-    </section>
-  </body>
-  <script src="script.js"></script>
-</html>
+        <div class="footer-right">
+          <p>ช่องทางการติดต่อ</p>
+          <div class="contact-icons">
+            <div class="circle"></div>
+            <div class="circle"></div>
+            <div class="circle"></div>
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+          <p>
+            เว็บไซต์นี้ได้สร้างมาเพื่อใช้ในเชิงพาณิชย์
+            เป็นเพียงตัวอย่างเพื่อใช้สำหรับการศึกษา
+          </p>
+        </div>
+      </div>
+      <div class="footer-copy">@Copyright</div>
+    </footer>
+  </section>
+</body>
+<script src="script.js"></script>
 
+</html>
