--- a/Nest Game/index.html
+++ b/Nest Game/index.html
@@ -54,7 +54,7 @@
       <button onclick="black()" id="bt-up">
         < </button>
           <img id="img" src="img/add.png" alt="" />
-          <button onclick="netx()">></button>
+          <button onclick="netx()" id="bt-up">></button>
     </div>
   </section>
 
