--- a/Nest Game/index.html
+++ b/Nest Game/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+  <!-- mon login -->
   <div id="loginPopup">
     <div id="loginBox">
       <span id="closeBtn">&times;</span>
@@ -19,6 +20,7 @@
       <button>Submit</button>
     </div>
   </div>
+  <!-- john nav -->
   <div class="nav-bar">
     <div class="icon"><img src="img/icon-re.png" alt="" /></div>
     <div class="nav-search">
