--- a/Nest Game/index.html
+++ b/Nest Game/index.html
@@ -17,7 +17,7 @@
       <h3>เข้าสู่ระบบ</h3>
       <input type="text" name="usrnamelogin" placeholder="Username" /><br />
       <input type="password" name="urspwd" placeholder="Password" /><br /><br />
-      <button>ตกลง</button>
+        <button id="loginSubmit">ตกลง</button>
       <button onclick="" class="signin">สมัครสมาชิก</button>
     </div>
   </div>
@@ -32,7 +32,7 @@
       <input type="text" name="usrgmailsingin" placeholder="Usergmail" /><br />
       <input type="password" name="urspwdsingin" placeholder="Password" /><br />
       <input type="password" name="usrconpwdsingin" placeholder="Confirmpassword" /><br /><br />
-      <button>ตกลง</button>
+      <button id="signinSubmit">ตกลง</button>
     </div>
   </div>
   <!-- john nav -->
