--- a/Nest Game/index.html
+++ b/Nest Game/index.html
@@ -14,6 +14,7 @@
   <div id="loginPopup">
     <div id="loginBox">
       <span id="closeBtn">&times;</span>
+      <img src="img/icon-re.png" alt="" width="140rem" class="imgin">
       <h3>เข้าสู่ระบบ</h3>
       <input type="text" name="usrnamelogin" placeholder="Username" /><br />
       <input type="password" name="urspwd" placeholder="Password" /><br /><br />
@@ -25,6 +26,7 @@
   <div id="signinPopup">
     <div id="signinBox">
       <span id="closepop">&times;</span>
+      <img src="img/icon-re.png" alt="" width="140rem" class="imgin">
       <h3>สมัครสมาชิก</h3>
       <input type="text" name="usrnamesignin" placeholder="Username" />
       <input type="text" name="usrlastnamesignin" placeholder="Userlastname" /><br />
@@ -59,11 +61,14 @@
       <h3>หมวดหมู่</h3>
     </div>
     <div class="nav-manu-info">
-      <p>เเนะนำ</p>
-      <p>โปรโมชั่น</p>
-      <p>บริการหลังซื้อ</p>
-      <p>วิธีซื้อ / ใช้งาน</p>
-      <p>ติดต่อ</p>
+      <nav>
+        <ul></ul>
+        <li><a href="#">เเนะนำ</a></li>
+        <li><a href="#">โปรโมชั่น</a></li>
+        <li><a href="#">บริการหลังซื้อ</a></li>
+        <li><a href="#">วิธีซื้อ / ใช้งาน</a></li>
+        <li><a href="#end">ติดต่อ</a></li>
+    </nav>
     </div>
   </section>
 
@@ -208,7 +213,7 @@
 
 
   <!-- Copyright -->
-  <section>
+  <section id="end">
     <footer class="footer">
       <div class="footer-container">
         <div class="footer-left">
