--- a/Nest Game/index.html
+++ b/Nest Game/index.html
@@ -93,7 +93,7 @@
       </div>
       <h5>Age of Mythology: Retold</h5>
       <div class="it">
-        <p>ราคา </p>
+        <p>-50% <del>฿990</del> ฿495</p>
         <button id="by">BUY</button>
         <button id="add"><i class="fa-solid fa-heart"></i></button>
       </div>
@@ -106,7 +106,7 @@
       </div>
       <h5>Black Myth Wukong</h5>
       <div class="it">
-        <p>ราคา </p>
+        <p>-50% <del>฿1799</del> ฿899.50</p>
         <button id="by">BUY</button>
         <button id="add"><i class="fa-solid fa-heart"></i></button>
         <div class="ovrlay">
@@ -121,7 +121,7 @@
       </div>
       <h5>Garry's Mod</h5>
       <div class="it">
-        <p>ราคา</p>
+        <p>-50% <del>฿219</del> ฿109.50</p>
         <button id="by">BUY</button>
         <button id="add"><i class="fa-solid fa-heart"></i></button>
       </div>
@@ -142,7 +142,7 @@
         <br>
       </h5>
       <div class="it">
-        <p>ราคา </p>
+        <p>-50% <del>฿1500</del> ฿750</p>
         <button id="by">BUY</button>
         <button id="add"><i class="fa-solid fa-heart"></i></button>
       </div>
@@ -155,7 +155,7 @@
       </div>
       <h5> Red Alert™ 2 </h5>
       <div class="it">
-        <p>ราคา </p>
+        <p>-50% <del>฿636</del> ฿318</p>
         <button id="by">BUY</button>
         <button id="add"><i class="fa-solid fa-heart"></i></button>
         <div class="ovrlay">
@@ -219,21 +219,15 @@
         <div class="footer-left">
           <div class="footer-contract-section">
             <img src="img/icon-re.png" alt="Nest Games logo" class="footer-logo" />
-            <p class="footer-description">
-              <strong>Nest Games</strong><br />
+            <div class="footer-description">
+              <p><strong>Nest Games</strong><br />
               มอบความคุ้มค่ามากมายให้กับเกมเมอร์เช่นคุณ ทั้งเกมสมาชิก เติมเงิน
               และอื่น ๆ อีกมากมาย เลือกขายบน PC, Xbox, PlayStation และ
               Nintendo กว่า 15,000 เกม แล้วค้นหาแพลตฟอร์มของคุณได้เลย
               ร่วมเป็นส่วนหนึ่งกับเกมเมอร์หลายล้านคนที่กำลังประหยัดสุดคุ้มกับ
-              Nest Games
-            </p>
-          </div>
-          <p>ช่องทางการชำระ:</p>
-          <div class="payment-icons">
-            <div class="payment-icon"></div>
-            <div class="payment-icon"></div>
-            <div class="payment-icon"></div>
-            <div class="payment-icon"></div>
+              Nest Games</p>
+              
+            </div>
           </div>
         </div>
         <div class="footer-right">
@@ -243,6 +237,13 @@
             <div class="circle"><i class="fa-brands fa-whatsapp"></i></div>
             <div class="circle"><i class="fa-brands fa-telegram"></i></div>
             <div class="circle"><i class="fa-brands fa-facebook-f"></i></div>
+          </div>
+          <p>ช่องทางการชำระ:</p>
+          <div class="payment-icons">
+            <div class="payment-icon"></div>
+            <div class="payment-icon"></div>
+            <div class="payment-icon"></div>
+            <div class="payment-icon"></div>
           </div>
           <p>
             เว็บไซต์นี้ได้สร้างมาเพื่อใช้ในเชิงพาณิชย์
