--- a/Nest Game/index.html
+++ b/Nest Game/index.html
@@ -67,7 +67,7 @@
         <ul></ul>
         <li><a href="#">เเนะนำ</a></li>
         <li><a href="#">โปรโมชั่น</a></li>
-        <li><a href="#">บริการหลังซื้อ</a></li>
+        <li><a href="afterbuy.html">บริการหลังซื้อ</a></li>
         <li><a href="#">วิธีซื้อ / ใช้งาน</a></li>
         <li><a href="#end">ติดต่อ</a></li>
     </nav>
@@ -339,10 +339,10 @@
         <div class="footer-right">
           <p>ช่องทางการติดต่อ</p>
           <div class="contact-icons">
-            <div class="circle"><i class="fa-brands fa-discord"></i></div>
-            <div class="circle"><i class="fa-brands fa-whatsapp"></i></div>
-            <div class="circle"><i class="fa-brands fa-telegram"></i></div>
-            <div class="circle"><i class="fa-brands fa-facebook-f"></i></div>
+            <a href=""><div class="circle"><i class="fa-brands fa-discord"></i></div></a>
+            <a href=""><div class="circle"><i class="fa-brands fa-whatsapp"></i></div></a>
+            <a href=""><div class="circle"><i class="fa-brands fa-telegram"></i></div></a>
+            <a href=""><div class="circle"><i class="fa-brands fa-facebook-f"></i></div></a>
           </div>
           <p>ช่องทางการชำระ:</p>
           <div class="payment-icons">
