--- a/Nest Game/index.html
+++ b/Nest Game/index.html
@@ -339,10 +339,10 @@
         <div class="footer-right">
           <p>ช่องทางการติดต่อ</p>
           <div class="contact-icons">
-            <a href=""><div class="circle"><i class="fa-brands fa-discord"></i></div></a>
-            <a href=""><div class="circle"><i class="fa-brands fa-whatsapp"></i></div></a>
-            <a href=""><div class="circle"><i class="fa-brands fa-telegram"></i></div></a>
-            <a href=""><div class="circle"><i class="fa-brands fa-facebook-f"></i></div></a>
+            <a href="#"><div class="circle"><i class="fa-brands fa-discord"></i></div></a>
+            <a href="#"><div class="circle"><i class="fa-brands fa-whatsapp"></i></div></a>
+            <a href="#"><div class="circle"><i class="fa-brands fa-telegram"></i></div></a>
+            <a href="#"><div class="circle"><i class="fa-brands fa-facebook-f"></i></div></a>
           </div>
           <p>ช่องทางการชำระ:</p>
           <div class="payment-icons">
