--- a/Nest Game/index.html
+++ b/Nest Game/index.html
@@ -46,7 +46,7 @@
     <div class="nav-search">
       <input type="text" name="" id="" placeholder="  ค้นหา" />
       <button onclick="bt()">
-        <i class="fa-solid fa-magnifying-glass"></i>
+        <a href=""><i class="fa-solid fa-magnifying-glass"></i></a>
       </button>
     </div>
     <div class="icon-gop">
@@ -60,7 +60,7 @@
   </div>
   <section class="nav-2">
     <div class="nav-manu">
-      <h3>หมวดหมู่</h3>
+      <a href=""><h3>หมวดหมู่</h3></a>
     </div>
     <div class="nav-manu-info">
       <nav>
