--- a/Nest Game/index.html
+++ b/Nest Game/index.html
@@ -352,7 +352,7 @@
             <div class="payment-icon"></div>
           </div>
           <p>
-            เว็บไซต์นี้ได้สร้างมาเพื่อใช้ในเชิงพาณิชย์
+            เว็บไซต์นี้ไม่ได้สร้างมาเพื่อใช้ในเชิงพาณิชย์
             เป็นเพียงตัวอย่างเพื่อใช้สำหรับการศึกษา
           </p>
         </div>
