--- a/Nest Game/index.html
+++ b/Nest Game/index.html
@@ -20,7 +20,8 @@
       <input type="password" name="urspwd" placeholder="Password" /><br /><br />
       <button id="loginSubmit">ตกลง</button>
       <button class="signin" id="signin">สมัครสมาชิก</button><br />
-      <p><br />เมื่อเข้าสู่ระบบ ถือว่าคุณได้ยอมรับและ<br />รับทราบ <a href="agreement.html">นโยบายความเป็นส่วนตัว</a> ของ Nest Games แล้ว</p>
+      <p><br />เมื่อเข้าสู่ระบบ ถือว่าคุณได้ยอมรับและ<br />รับทราบ <a href="agreement.html">นโยบายความเป็นส่วนตัว</a>
+        ของ Nest Games แล้ว</p>
     </div>
   </div>
   <!-- phoom sign in -->
@@ -36,9 +37,10 @@
       <input type="password" name="urspwdsingin" placeholder="Password" /><br />
       <input type="password" name="usrconpwdsingin" placeholder="Confirmpassword" /><br /><br />
       <button id="signinSubmit">ตกลง</button><br />
-      <p><br />เมื่อเข้าสู่ระบบ ถือว่าคุณได้ยอมรับและ<br />รับทราบ <a href="agreement.html">นโยบายความเป็นส่วนตัว</a> ของ Nest Games แล้ว</p>
+      <p><br />เมื่อเข้าสู่ระบบ ถือว่าคุณได้ยอมรับและ<br />รับทราบ <a href="agreement.html">นโยบายความเป็นส่วนตัว</a>
+        ของ Nest Games แล้ว</p>
     </div>
-    </div>
+  </div>
   </div>
   <!-- john nav -->
   <div class="nav-bar">
@@ -51,7 +53,9 @@
     </div>
     <div class="icon-gop">
       <div class="lang">
-        <a href=""><p>ภาษา</p></a>
+        <a href="">
+          <p>ภาษา</p>
+        </a>
       </div>
       <div class="market"><i class="fa-solid fa-basket-shopping"></i></div>
       <div class="like"><i class="fa-solid fa-heart"></i></div>
@@ -60,7 +64,9 @@
   </div>
   <section class="nav-2">
     <div class="nav-manu">
-      <a href=""><h3>หมวดหมู่</h3></a>
+      <a href="">
+        <h3>หมวดหมู่</h3>
+      </a>
     </div>
     <div class="nav-manu-info">
       <nav>
@@ -70,10 +76,9 @@
         <li><a href="afterbuy.html">บริการหลังซื้อ</a></li>
         <li><a href="#">วิธีซื้อ / ใช้งาน</a></li>
         <li><a href="#end">ติดต่อ</a></li>
-    </nav>
+      </nav>
     </div>
   </section>
-
   <section class="contor">
     <div class="show">
       <button onclick="black()" id="bt-up">
@@ -82,8 +87,18 @@
       <button onclick="netx()" id="bt-up"><i class="fa-solid fa-angle-right"></i></button>
     </div>
   </section>
+  <div >
+    <nav id="navgame">
+      <li><a href="#solo">ผู้เล่นเดี่ยว</a></li>
+      <li><a href="#multi">ผู้เล่นหลายคน</a></li>
+      <li><a href="#sim">จำลองสถานการณ์</a></li>
+      <li><a href="#plan">วางเเผน</a></li>
+      <li><a href="#wip">สิทธิพิเศษ</a></li>
+      <li><a href="#coin">ค่าเงิน</a></li>
+    </nav>
+  </div>
   <!-- games add 1-->
-  <section class="container-1">
+  <section class="container-1" id="solo">
     <div class="header-best-seller">
       <h3>ผู้เล่นเดี่ยว</h3>
     </div>
@@ -108,7 +123,7 @@
       </div>
       <h5>Black Myth Wukong</h5>
       <div class="it">
-        <p>-50% <del>฿1799</del> ฿899.50</p>
+        <p>-50% <del>฿1,799</del> ฿899.50</p>
         <button id="by">BUY</button>
         <button id="add"><i class="fa-solid fa-heart"></i></button>
         <div class="ovrlay">
@@ -129,8 +144,55 @@
       </div>
     </div>
   </section>
-  <!-- games add 2-->
-  <section class="container-1">
+    <!-- games add 2 -->
+  <section class="container-1" id="multi">
+    <div class="header-best-seller">
+      <h3>ผู้เล่นหลายคน</h3>
+    </div>
+    <div class="wap-in">
+      <div class="pen">
+        <img src="img/add.png" alt="" />
+        <div class="ovrlay">
+        </div>
+      </div>
+      <h5>พื้นที่โฆษณา</h5>
+      <div class="it">
+        <p>ราคา </p>
+        <button id="by">BUY</button>
+        <button id="add"><i class="fa-solid fa-heart"></i></button>
+      </div>
+    </div>
+    <div class="wap-in">
+      <div class="pen">
+        <img src="img/add.png" alt="" />
+        <div class="ovrlay">
+        </div>
+      </div>
+      <h5>พื้นที่โฆษณา</h5>
+      <div class="it">
+        <p>ราคา </p>
+        <button id="by">BUY</button>
+        <button id="add"><i class="fa-solid fa-heart"></i></button>
+        <div class="ovrlay">
+        </div>
+      </div>
+    </div>
+    <div class="wap-in">
+      <div class="pen">
+        <img src="img/add.png" alt="" />
+        <div class="ovrlay">
+        </div>
+      </div>
+      <h5>พื้นที่โฆษณา</h5>
+      <div class="it">
+        <p>ราคา</p>
+        <button id="by">BUY</button>
+        <button id="add"><i class="fa-solid fa-heart"></i></button>
+      </div>
+    </div>
+  </section>
+  <!-- games add 3-->
+  <section class="container-1" id="sim">
     <div class="header-best-seller">
       <h3>จำลองสถานการณ์</h3>
     </div>
@@ -144,7 +206,7 @@
         <br>
       </h5>
       <div class="it">
-        <p>-50% <del>฿1500</del> ฿750</p>
+        <p>-50% <del>฿1,500</del> ฿750</p>
         <button id="by">BUY</button>
         <button id="add"><i class="fa-solid fa-heart"></i></button>
       </div>
@@ -164,11 +226,24 @@
         </div>
       </div>
     </div>
+    <div class="wap-in">
+      <div class="pen">
+        <img src="img/Age_of_Mythology_Retold_capa.jpg" alt="" />
+        <div class="ovrlay">
+        </div>
+      </div>
+      <h5>Age of Mythology: Retold</h5>
+      <div class="it">
+        <p>-50% <del>฿990</del> ฿495</p>
+        <button id="by">BUY</button>
+        <button id="add"><i class="fa-solid fa-heart"></i></button>
+      </div>
+    </div>
   </section>
-  <!-- games add 3 -->
-  <section class="container-1">
+    <!-- games add 4 -->
+  <section class="container-1" id="plan">
     <div class="header-best-seller">
-      <h3>พื้นที่โฆษณา</h3>
+      <h3>วางเเผน</h3>
     </div>
     <div class="wap-in">
       <div class="pen">
@@ -213,51 +288,53 @@
     </div>
   </section>
   <!-- game add game pass -->
-<section class="container-1">
+  <section class="container-1" id="wip">
     <div class="header-best-seller">
       <h3>สิทธิพิเศษ</h3>
     </div>
     <div class="wap-in">
       <div class="pen">
-        <img src="" alt="" />
+        <img src="img/xbox1.png" alt="" />
         <div class="ovrlay">
         </div>
       </div>
-      <h5>DARK SOULS™ III
+      <h5>FC26 5,900 FUT
         <br>
       </h5>
       <div class="it">
-        <p>-50% <del>฿1500</del> ฿750</p>
+        <p>-50% <del>฿1,976</del> ฿988</p>
         <button id="by">BUY</button>
         <button id="add"><i class="fa-solid fa-heart"></i></button>
       </div>
     </div>
     <div class="wap-in">
       <div class="pen">
-        <img src="" alt="" />
+        <img src="img/xbox2.png" alt="" />
         <div class="ovrlay">
         </div>
       </div>
-      <h5> Red Alert™ 2 </h5>
+      <h5> Crystal pack 2,100 Crystals
+        <br>
+      </h5>
       <div class="it">
-        <p>-50% <del>฿636</del> ฿318</p>
+        <p>-50% <del>฿607</del> ฿303.50</p>
         <button id="by">BUY</button>
         <button id="add"><i class="fa-solid fa-heart"></i></button>
         <div class="ovrlay">
         </div>
       </div>
-      </div>
+    </div>
     <div class="wap-in">
       <div class="pen">
-        <img src="" alt="" />
+        <img src="img/xbox3.png" alt="" />
         <div class="ovrlay">
         </div>
       </div>
-      <h5>DARK SOULS™ III
+      <h5>NBA2K18 75,000 VC
         <br>
       </h5>
       <div class="it">
-        <p>-50% <del>฿1500</del> ฿750</p>
+        <p>-50% <del>฿642</del> ฿321</p>
         <button id="by">BUY</button>
         <button id="add"><i class="fa-solid fa-heart"></i></button>
       </div>
@@ -266,51 +343,53 @@
   </section>
 
   <!-- game add coin -->
-   <section class="container-1">
+  <section class="container-1" id="coin">
     <div class="header-best-seller">
       <h3>ค่าเงิน</h3>
     </div>
     <div class="wap-in">
       <div class="pen">
-        <img src="" alt="" />
+        <img src="img/roblox1.png" alt="" />
         <div class="ovrlay">
         </div>
       </div>
-      <h5>DARK SOULS™ III
+      <h5> 1,000 Robux
         <br>
       </h5>
       <div class="it">
-        <p>-50% <del>฿1500</del> ฿750</p>
+        <p>-50% <del>฿500</del> ฿250</p>
         <button id="by">BUY</button>
         <button id="add"><i class="fa-solid fa-heart"></i></button>
       </div>
     </div>
     <div class="wap-in">
       <div class="pen">
-        <img src="" alt="" />
+        <img src="img/roblox3.png" alt="" />
         <div class="ovrlay">
         </div>
       </div>
-      <h5> Red Alert™ 2 </h5>
+      <h5> 2,000 Robux
+        <br>
+      </h5>
       <div class="it">
-        <p>-50% <del>฿636</del> ฿318</p>
+        <p>-50% <del>฿1000</del> ฿500</p>
         <button id="by">BUY</button>
         <button id="add"><i class="fa-solid fa-heart"></i></button>
         <div class="ovrlay">
         </div>
       </div>
-      </div>
+    </div>
     <div class="wap-in">
       <div class="pen">
-        <img src="" alt="" />
+        <img src="img/roblox.png" alt="" />
         <div class="ovrlay">
         </div>
       </div>
-      <h5>DARK SOULS™ III
+      <h5>4,500 Robux
         <br>
       </h5>
       <div class="it">
-        <p>-50% <del>฿1500</del> ฿750</p>
+        <p>-50% <del>฿1750</del> ฿875</p>
         <button id="by">BUY</button>
         <button id="add"><i class="fa-solid fa-heart"></i></button>
       </div>
@@ -327,22 +406,30 @@
             <img src="img/icon-re.png" alt="Nest Games logo" class="footer-logo" />
             <div class="footer-description">
               <p><strong>Nest Games</strong><br />
-              มอบความคุ้มค่ามากมายให้กับเกมเมอร์เช่นคุณ ทั้งเกมสมาชิก เติมเงิน
-              และอื่น ๆ อีกมากมาย เลือกขายบน PC, Xbox, PlayStation และ
-              Nintendo กว่า 15,000 เกม แล้วค้นหาแพลตฟอร์มของคุณได้เลย
-              ร่วมเป็นส่วนหนึ่งกับเกมเมอร์หลายล้านคนที่กำลังประหยัดสุดคุ้มกับ
-              Nest Games</p>
-              
+                มอบความคุ้มค่ามากมายให้กับเกมเมอร์เช่นคุณ ทั้งเกมสมาชิก เติมเงิน
+                และอื่น ๆ อีกมากมาย เลือกขายบน PC, Xbox, PlayStation และ
+                Nintendo กว่า 15,000 เกม แล้วค้นหาแพลตฟอร์มของคุณได้เลย
+                ร่วมเป็นส่วนหนึ่งกับเกมเมอร์หลายล้านคนที่กำลังประหยัดสุดคุ้มกับ
+                Nest Games</p>
+
             </div>
           </div>
         </div>
         <div class="footer-right">
           <p>ช่องทางการติดต่อ</p>
           <div class="contact-icons">
-            <a href="#"><div class="circle"><i class="fa-brands fa-discord"></i></div></a>
-            <a href="#"><div class="circle"><i class="fa-brands fa-whatsapp"></i></div></a>
-            <a href="#"><div class="circle"><i class="fa-brands fa-telegram"></i></div></a>
-            <a href="#"><div class="circle"><i class="fa-brands fa-facebook-f"></i></div></a>
+            <a href="#">
+              <div class="circle"><i class="fa-brands fa-discord"></i></div>
+            </a>
+            <a href="#">
+              <div class="circle"><i class="fa-brands fa-whatsapp"></i></div>
+            </a>
+            <a href="#">
+              <div class="circle"><i class="fa-brands fa-telegram"></i></div>
+            </a>
+            <a href="#">
+              <div class="circle"><i class="fa-brands fa-facebook-f"></i></div>
+            </a>
           </div>
           <p>ช่องทางการชำระ:</p>
           <div class="payment-icons">
