--- a/Nest Game/index.html
+++ b/Nest Game/index.html
@@ -100,7 +100,7 @@
   <!-- games add 1-->
   <section class="container-1" id="solo">
     <div class="header-best-seller">
-      <h3>ผู้เล่นเดี่ยว</h3>
+      <h3 class="type">ผู้เล่นเดี่ยว</h3>
     </div>
     <div class="wap-in">
       <div class="pen">
@@ -147,7 +147,7 @@
     <!-- games add 2 -->
   <section class="container-1" id="multi">
     <div class="header-best-seller">
-      <h3>ผู้เล่นหลายคน</h3>
+      <h3 class="type">ผู้เล่นหลายคน</h3>
     </div>
     <div class="wap-in">
       <div class="pen">
@@ -194,7 +194,7 @@
   <!-- games add 3-->
   <section class="container-1" id="sim">
     <div class="header-best-seller">
-      <h3>จำลองสถานการณ์</h3>
+      <h3 class="type">จำลองสถานการณ์</h3>
     </div>
     <div class="wap-in">
       <div class="pen">
@@ -245,7 +245,7 @@
     <!-- games add 4 -->
   <section class="container-1" id="plan">
     <div class="header-best-seller">
-      <h3>วางเเผน</h3>
+      <h3 class="type">วางเเผน</h3>
     </div>
     <div class="wap-in">
       <div class="pen">
@@ -292,7 +292,7 @@
   <!-- game add game pass -->
   <section class="container-1" id="wip">
     <div class="header-best-seller">
-      <h3>สิทธิพิเศษ</h3>
+      <h3 class="type">สิทธิพิเศษ</h3>
     </div>
     <div class="wap-in">
       <div class="pen">
@@ -347,7 +347,7 @@
   <!-- game add coin -->
   <section class="container-1" id="coin">
     <div class="header-best-seller">
-      <h3>ค่าเงิน</h3>
+      <h3 class="type">ค่าเงิน</h3>
     </div>
     <div class="wap-in">
       <div class="pen">
@@ -435,10 +435,10 @@
           </div>
           <p>ช่องทางการชำระ:</p>
           <div class="payment-icons">
-            <div class="payment-icon"></div>
-            <div class="payment-icon"></div>
-            <div class="payment-icon"></div>
-            <div class="payment-icon"></div>
+            <div><img src="img/50.png" alt="" class="payment-icon"></div>
+            <div><img src="img/master.png" alt="" class="payment-icon"></div>
+            <div><img src="img/pay.png" alt="" class="payment-icon"></div>
+            <div><img src="img/paypal.png" alt="" class="payment-icon"></div>
           </div>
           <p>
             เว็บไซต์นี้ไม่ได้สร้างมาเพื่อใช้ในเชิงพาณิชย์
