--- a/Nest Game/index.html
+++ b/Nest Game/index.html
@@ -74,7 +74,7 @@
         <li><a href="#">เเนะนำ</a></li>
         <li><a href="#">โปรโมชั่น</a></li>
         <li><a href="afterbuy.html">บริการหลังซื้อ</a></li>
-        <li><a href="#">วิธีซื้อ / ใช้งาน</a></li>
+        <li><a href="howto.html">วิธีซื้อ / ใช้งาน</a></li>
         <li><a href="#end">ติดต่อ</a></li>
       </nav>
     </div>
