--- a/Nest Game/agreement.html
+++ b/Nest Game/agreement.html
@@ -17,7 +17,7 @@
     <h3 class="xx">บริษัท เเนสเกม จำกัด (มหาชน)</h3>
     <hr>
     <h3 class="XX">นโยบายข้อที่ 1 - หลักการเเละวัตถุประสงค์</h3>
-    <h4>ด้วยปัจจุบันความก้าวหน้าของเทคโนโลยีสารสนเทศ รวมทั้งระบบสื่อสารทำให้การเก็บรวบรวม การใช้ และการเปิดเผยข้อมูลส่วนบุคคลสามารถทำได้โดยง่าย สะดวก และรวดเร็ว อันอาจนำมาซึ่งความเดือดร้อนรำคาญ หรือความเสียหายในกรณีที่มีการนำไปแสวงหาประโยชน์หรือเปิดเผยโดยไม่ได้รับความยินยอมหรือแจ้งล่วงหน้า บริษัท เเนสเกม จำกัด (มหาชน) ได้ตระหนักและให้ความสำคัญอย่างยิ่งต่อการคุ้มครองข้อมูลส่วนบุคคลและการปฏิบัติตามพระราชบัญญัติคุ้มครองข้อมูลส่วนบุคคล พ.ศ. 2562 ทั้งนี้เพื่อให้เจ้าของข้อมูลส่วนบุคคลเชื่อมั่นว่าบริษัทฯ จะดูแลรักษาข้อมูลส่วนบุคคลของเจ้าของข้อมูลส่วนบุคคลและจัดให้มีมาตรการรักษาความมั่นคงปลอดภัยที่เหมาะสม และมีประสิทธิภาพสอดคล้องตามพระราชบัญญัติคุ้มครองข้อมูลส่วนบุคคล พ.ศ. 2562 บริษัทฯ จึงได้มีนโยบายคุ้มครองข้อมูลส่วนบุคคล เพื่อชี้แจงรายละเอียดการกำกับดูแล วิธีการประมวลผลข้อมูล นโยบายและแนวทางปฏิบัติในการการคุ้มครองข้อมูลส่วนบุคคล ดังต่อไปนี้</h4>
+    <h4>ด้วยปัจจุบันความก้าวหน้าของเทคโนโลยีสารสนเทศ รวมทั้งระบบสื่อสารทำให้การเก็บรวบรวม การใช้ และการเปิดเผยข้อมูลส่วนบุคคลสามารถทำได้โดยง่าย สะดวก และรวดเร็ว อันอาจนำมาซึ่งความเดือดร้อนรำคาญ หรือความเสียหายในกรณีที่มีการนำไปแสวงหาประโยชน์หรือเปิดเผยโดยไม่ได้รับความยินยอมหรือแจ้งล่วงหน้า บริษัท เเนสเกม จำกัด (มหาชน) ได้ตระหนักและให้ความสำคัญอย่างยิ่งต่อการคุ้มครองข้อมูลส่วนบุคคลและการปฏิบัติตาม<a href="https://www.pdpc.or.th/1540/"> พระราชบัญญัติคุ้มครองข้อมูลส่วนบุคคล พ.ศ. 2562</a> ทั้งนี้เพื่อให้เจ้าของข้อมูลส่วนบุคคลเชื่อมั่นว่าบริษัทฯ จะดูแลรักษาข้อมูลส่วนบุคคลของเจ้าของข้อมูลส่วนบุคคลและจัดให้มีมาตรการรักษาความมั่นคงปลอดภัยที่เหมาะสม และมีประสิทธิภาพสอดคล้องตามพระราชบัญญัติคุ้มครองข้อมูลส่วนบุคคล พ.ศ. 2562 บริษัทฯ จึงได้มีนโยบายคุ้มครองข้อมูลส่วนบุคคล เพื่อชี้แจงรายละเอียดการกำกับดูแล วิธีการประมวลผลข้อมูล นโยบายและแนวทางปฏิบัติในการการคุ้มครองข้อมูลส่วนบุคคล ดังต่อไปนี้</h4>
     <h3 class="XX">
         <hr>
         นโยบายข้อที่ 2 - ขอบเขตการบังคับใช้
@@ -37,7 +37,7 @@
         <h3 class="xx">4.2 การประมวลผลข้อมูลส่วนบุคคล</h3>
         <h4>1.บริษัทฯ จะดำเนินการเก็บรวบรวม ใช้ และเปิดเผยข้อมูลส่วนบุคคลเพียงเท่าที่จำเป็นภายใต้วัตถุประสงค์ของบริษัทฯ และให้ถูกต้องตามกฎหมาย เป็นธรรม โปร่งใส <br>
             2.บริษัทฯ จะแจ้งให้เจ้าของข้อมูลส่วนบุคคลได้รับทราบถึงรายละเอียดวัตถุประสงค์ในการเก็บรวบรวม ใช้ และเปิดเผยข้อมูล สิทธิของเจ้าของข้อมูลก่อนดำเนินการขอความยินยอมในการเก็บรวบรวม ใช้ และเปิดเผย เพื่อแสดงให้เห็นถึงความโปร่งใส และสอดคล้องตามที่กฎหมายบัญญัติ<br>
-            3.บริษัทฯ จะต้องขอความยินยอมโดยชัดแจ้งในการเก็บรวบรวม ใช้ และเปิดเผยจากเจ้าของข้อมูลส่วนบุคคลก่อนหรือขณะเก็บข้อมูลส่วนบุคคลตามแบบวิธีการที่บริษัทฯ กำหนด เว้นแต่จะเข้าข้อยกเว้นตามที่พระราชบัญญัติคุ้มครองข้อมูลส่วนบุคคล พ.ศ. 2562 หรือกฎหมายอื่นกำหนดไว้<br>
+            3.บริษัทฯ จะต้องขอความยินยอมโดยชัดแจ้งในการเก็บรวบรวม ใช้ และเปิดเผยจากเจ้าของข้อมูลส่วนบุคคลก่อนหรือขณะเก็บข้อมูลส่วนบุคคลตามแบบวิธีการที่บริษัทฯ กำหนด เว้นแต่จะเข้าข้อยกเว้นตามที่ <a href="https://www.pdpc.or.th/1540/">พระราชบัญญัติคุ้มครองข้อมูลส่วนบุคคล พ.ศ. 2562</a> หรือกฎหมายอื่นกำหนดไว้<br>
             4.บริษัทฯ จะจัดให้มีกลไกการตรวจสอบความถูกต้องของข้อมูลส่วนบุคคล รวมทั้งจัดให้มีกลไกการแก้ไขข้อมูลส่วนบุคคลให้ถูกต้อง<br>
             5.ในกรณีที่บริษัทฯ ส่ง โอน หรือให้บุคคลอื่นใช้ข้อมูลส่วนบุคคล บริษัทฯจะจัดทำข้อตกลงกับผู้รับหรือใช้ข้อมูลส่วนบุคคลนั้นเพื่อกำหนดสิทธิและหน้าที่ให้สอดคล้องกับกฎหมาย และนโยบายการคุ้มครองข้อมูลส่วนบุคคลของบริษัทฯ<br>
             6.บริษัทฯ จะรักษาความลับของข้อมูลส่วนบุคคลตามมาตรการของบริษัทฯ เพื่อให้เกิดความเป็นธรรม โปร่งใสแก่เจ้าของข้อมูลส่วนบุคคล</h4>
